bridge/base/0-totalmodbot-namespace.yaml
#! 0-totalmodbot-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: totalmodbot
    labels:
        com.docker.compose.project: totalmodbot
