bridge/base/moderator-bot-deployment.yaml
#! moderator-bot-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: moderator-bot
    namespace: totalmodbot
    labels:
        com.docker.compose.project: totalmodbot
        com.docker.compose.service: moderator-bot
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: totalmodbot
            com.docker.compose.service: moderator-bot
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: totalmodbot
                com.docker.compose.service: moderator-bot
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: moderator-bot
                  image: totalmodbot-moderator-bot
                  imagePullPolicy: IfNotPresent
                  volumeMounts:
                    - name: app-data
                      mountPath: /app/data
            volumes:
                - name: app-data
                  persistentVolumeClaim:
                    claimName: moderator-bot-bot-data
